# comparison-circuit-over-fq

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sort.py  test_functions.sage
code/: CMakeLists.txt  comparator.cpp  comparator.h  comparison_circuit.cpp  min_max_circuit.cpp  old_garbage.cpp  sort.py  sorting_circuit.cpp  test_functions.sage  tools.cpp  tools.h
paper/: appendix.tex  applications.tex  background.tex  biblio.bib  commands.tex  comparison-circuit.tex  conclusion.tex  dgruyter_NEW.sty  homomorphic-encryption.tex  ideas.tex  implem-results.tex  intro.tex  main.tex  main_pets.tex  related-art.tex
